chore: update fig paths

--- a/book/lectures/nlp_intro/vetorization/index.ipynb
+++ b/book/lectures/nlp_intro/vetorization/index.ipynb
@@ -1,16 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cfdc61fb",
    "metadata": {},
    "source": [
     "# Vector Semantics and Representation\n",
     "\n",
-    "![](../figs/intro_nlp/vector/entelecheia_alphabet_letters.png)"
+    "![](figs/entelecheia_alphabet_letters.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "66d50cc3",
    "metadata": {},
@@ -20,10 +22,11 @@
     "- Lexical semantics is the study of the meaning of words\n",
     "- Distributional hypothesis: words that occur in similar contexts have similar meanings\n",
     "- Sparse vectors: one-hot encoding or bag-of-words\n",
-    "- Dense vectors: word embeddings"
+    "- Dense vectors: word embeddings\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e53f57ee",
    "metadata": {},
@@ -44,10 +47,11 @@
     "\n",
     "- \"bar\" is a place where you can drink alcohol?\n",
     "- \"bar\" is a long rod?\n",
-    "- \"bar\" is to prevent something from moving?"
+    "- \"bar\" is to prevent something from moving?\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "16e9b973",
    "metadata": {},
@@ -62,10 +66,11 @@
     "  - Relatedness: \"bar\" and \"restaurant\"\n",
     "  - Superordinate: \"bar\" and \"place\"\n",
     "  - Subordinate: \"bar\" and \"pub\"\n",
-    "  - Connotation: \"bar\" and \"prison\""
+    "  - Connotation: \"bar\" and \"prison\"\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0adf9cd3",
    "metadata": {},
@@ -74,15 +79,16 @@
     "\n",
     "NLP draws on two different approaches to lexical semantics:\n",
     "\n",
-    "- **Lexical semantics**: \n",
+    "- **Lexical semantics**:\n",
     "  - The study of the meaning of words\n",
     "  - The lexicographic tradition aims to capture the information represented in lexical entries in dictionaries\n",
-    "- **Distributional semantics**: \n",
+    "- **Distributional semantics**:\n",
     "  - The study of the meaning of words based on their distributional properties in large corpora\n",
-    "  - The distributional hypothesis: words that occur in similar contexts have similar meanings"
+    "  - The distributional hypothesis: words that occur in similar contexts have similar meanings\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "55701de7",
    "metadata": {},
@@ -94,14 +100,12 @@
     "  - bank 1 = a financial institution\n",
     "  - bank 2 = a river bank\n",
     "- May capture explicit knowledge about word meanings, but is limited in its ability to capture the meaning of words that are not in the lexicon.\n",
-    "  -  `dog` is a `canine` (lexicon)\n",
-    "  -  `cars` have `wheels` (lexicon)\n",
-    "\n",
-    "\n",
-    "\n"
+    "  - `dog` is a `canine` (lexicon)\n",
+    "  - `cars` have `wheels` (lexicon)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8a8d7870",
    "metadata": {},
@@ -111,10 +115,11 @@
     "- Uses `large corpora of raw text` to learn the meaning of words from the contexts in which they occur.\n",
     "- Maps words to `vector representations` that capture the `distributional properties` of the words in the corpus.\n",
     "- Uses neural networks to learn the dense vector representations of words, `word embeddings`, from large corpora of raw text.\n",
-    "- If each word is mapped to a single vector, this ignores the fact that words can have multiple meanings or parts of speech."
+    "- If each word is mapped to a single vector, this ignores the fact that words can have multiple meanings or parts of speech.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9c6c71ae",
    "metadata": {},
@@ -130,10 +135,11 @@
     "- As very high-dimensional `sparse vectors`\n",
     "  - to capture the distributional properties of words\n",
     "- As low-dimensional `dense vectors`\n",
-    "  - word embeddings"
+    "  - word embeddings\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f943297e",
    "metadata": {},
@@ -141,10 +147,11 @@
     "### What should word representations capture?\n",
     "\n",
     "- Vector representations of words were originally used to capture `lexical semantics` so that words with similar meanings would be represented by vectors that are close together in vector space.\n",
-    "- These representations may also capture some `morphological` and `syntactic` information about words. (part of speech, inflections, stems, etc.)"
+    "- These representations may also capture some `morphological` and `syntactic` information about words. (part of speech, inflections, stems, etc.)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ce04d66b",
    "metadata": {},
@@ -152,19 +159,22 @@
     "#### The Distributional Hypothesis\n",
     "\n",
     "Zellig Harris (1954):\n",
+    "\n",
     "- Words that occur in similar contexts have similar meanings.\n",
     "- `oculist` and `eye doctor` occur in almost the same contexts\n",
     "- If A and B have almost the same environment, then A and B are synonymous.\n",
     "\n",
     "John Firth (1957):\n",
+    "\n",
     "- You shall know a word by the company it keeps.\n",
     "\n",
     "> The `contexts` in which words occur tell us a lot about the meaning of words.\n",
-    "> \n",
-    "> Words that occur in similar contexts have similar meanings."
+    ">\n",
+    "> Words that occur in similar contexts have similar meanings.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bad362e4",
    "metadata": {},
@@ -178,10 +188,11 @@
     "- `Tezgüino` makes you drunk.\n",
     "- We make `tezgüino` out of corn.\n",
     "\n",
-    "We don't know what `tezgüino` is, but we can guess that it is a drink because we understand these sentences."
+    "We don't know what `tezgüino` is, but we can guess that it is a drink because we understand these sentences.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "172f6e92",
    "metadata": {},
@@ -198,11 +209,13 @@
     "Could we guess that `tezgüino` is a drink like `wine` or `beer`?\n",
     "\n",
     "However, there are also red herrings:\n",
+    "\n",
     "- Everybody likes `babies`\n",
     "- Everybody likes `chocolate`\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0ca22e33",
    "metadata": {},
@@ -210,15 +223,18 @@
     "### Two ways NLP uses context for semantics\n",
     "\n",
     "`Distributional similarity`: (vector-space semantics)\n",
+    "\n",
     "- Assume that words that occur in similar contexts have similar meanings.\n",
     "- Use the `set of all contexts` in which a word occurs to measure the `similarity` between words.\n",
     "\n",
     "`Word sense disambiguation`:\n",
+    "\n",
     "- Assume that if a word has multiple meanings, then it will occur in different contexts for each meaning.\n",
-    "- Use the context of a particular occurrence of a word to identify the `sense` of the word in that context."
+    "- Use the context of a particular occurrence of a word to identify the `sense` of the word in that context.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "81abcaaa",
    "metadata": {},
@@ -234,10 +250,11 @@
     "- Represent words as `sparse vectors` such that:\n",
     "  - each `vector element` (dimension) represents a different `context`\n",
     "  - the `value` of each element is the `frequency` of the context in which the word occurs, capturing how `strongly` the word is associated with that context\n",
-    "- Compute the `semantic similarity of words` by measuring the `similarity of their context vectors`"
+    "- Compute the `semantic similarity of words` by measuring the `similarity of their context vectors`\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "026d1978",
    "metadata": {},
@@ -250,10 +267,11 @@
     "\n",
     "- each dimension $i$ represents a different context $c_i$\n",
     "- each element $v_{w,i}$ captures how strongly $w$ is associated with context $c_i$\n",
-    "- $v_{w,i}$ is the co-occurrence count of $w$ and $c_i$"
+    "- $v_{w,i}$ is the co-occurrence count of $w$ and $c_i$\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d6149211",
    "metadata": {},
@@ -266,32 +284,36 @@
     "- Conversely, we can represent each `document` as an $M$-dimensional vector $v_d$ where $v_{d,j}$ is the `frequency` of the term $t_j$ in document $d$.\n",
     "\n",
     "Finding the `most relevant` documents for a query $q$ is equivalent to finding the `most similar` documents to the query vector $v_q$.\n",
+    "\n",
     "- Queries are also documents, so we can use the same vector representation for queries and documents.\n",
     "- Use the similarity of the query vector $v_q$ to the document vectors $v_d$ to rank the documents.\n",
-    "- Documents are similar to queries if they have similar terms."
+    "- Documents are similar to queries if they have similar terms.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "38c4f370",
    "metadata": {},
    "source": [
     "## Term-Document Matrix\n",
     "\n",
-    "![](../figs/intro_nlp/vector/2.png)\n",
+    "![](figs/2.png)\n",
     "\n",
     "A term-document matrix is a 2D matrix:\n",
+    "\n",
     "- each row represents a `term` in the vocabulary\n",
     "- each column represents a `document`\n",
-    "- each element is the `frequency` of the term in the document"
+    "- each element is the `frequency` of the term in the document\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09c953ff",
    "metadata": {},
    "source": [
-    "![](../figs/intro_nlp/vector/3.png)\n",
+    "![](figs/3.png)\n",
     "\n",
     "- Each `column vector` = a `document`\n",
     "  - Each entry = the `frequency` of the term in the document\n",
@@ -300,20 +322,22 @@
     "\n",
     "> Two documents are similar if their vectors are similar.\n",
     "\n",
-    "> Two words are similar if their vectors are similar."
+    "> Two words are similar if their vectors are similar.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0851ffa1",
    "metadata": {},
    "source": [
     "For information retrieval, the term-document matrix is useful because it allows us to represent documents as vectors and compute the similarity between documents in terms of the words they contain, or of terms in terms of the documents they occur in.\n",
     "\n",
-    "We can adapt this idea to implement `a model of the distributional hypothesis` if we treat each context as a column in the matrix and each word as a row."
+    "We can adapt this idea to implement `a model of the distributional hypothesis` if we treat each context as a column in the matrix and each word as a row.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1df58ee8",
    "metadata": {},
@@ -323,17 +347,20 @@
     "There are many ways to define a context:\n",
     "\n",
     "**Contexts defined by nearby words:**\n",
+    "\n",
     "- How often does the word $w_i$ occur within a window of $k$ words of the word $w_j$?\n",
     "- Or, how often do the words $w_i$ and $w_j$ occur in the same document or sentence?\n",
     "- This yields fairly broad thematic similarities between words.\n",
     "\n",
     "**Contexts defined by `grammtical relations`:**\n",
+    "\n",
     "- How often does the word $w_i$ occur as the `subject` of the word $w_j$?\n",
     "- This requires a `grammatical parser` to identify the grammatical relations between words.\n",
-    "- This yields more `fine-grained` similarities between words."
+    "- This yields more `fine-grained` similarities between words.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "278a8253",
    "metadata": {},
@@ -356,17 +383,18 @@
     "\n",
     "4. Compute the similarity between words by measuring the similarity of their context vectors.\n",
     "\n",
-    "- For example, we can use the cosine similarity of the context vectors."
+    "- For example, we can use the cosine similarity of the context vectors.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "da70deb7",
    "metadata": {},
    "source": [
     "### Word-Word Matrix\n",
     "\n",
-    "![](../figs/intro_nlp/vector/4.png)"
+    "![](figs/4.png)\n"
    ]
   },
   {
@@ -379,7 +407,7 @@
     "- $f(w, c)$ = how often does word w appear in context $c$:\n",
     "- `information` appeared six times in the context of `data`\n",
     "\n",
-    "![](../figs/intro_nlp/vector/5.png)\n"
+    "![](figs/5.png)\n"
    ]
   },
   {
@@ -407,6 +435,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a2305c7",
    "metadata": {},
@@ -414,23 +443,27 @@
     "### Getting co-occurrence counts\n",
     "\n",
     "Co-occurrence as a `binary` feature:\n",
+    "\n",
     "- Does word $w$ ever appear in the context $c$? (1 = yes/0 = no)\n",
     "\n",
-    "![](../figs/intro_nlp/vector/6.png)\n"
+    "![](figs/6.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c680df91",
    "metadata": {},
    "source": [
     "Co-occurrence as a frequency count:\n",
+    "\n",
     "- How often does word $w$ appear in the context $c$? (0,1,2,… times)\n",
     "\n",
-    "![](../figs/intro_nlp/vector/7.png)\n"
+    "![](figs/7.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9c704738",
    "metadata": {},
@@ -444,7 +477,7 @@
     "\n",
     "We can use pointwise mutual information (PMI) values instead of raw frequency counts:\n",
     "\n",
-    "$$ PMI(w,c) = \\log \\frac{p(w,c)}{p(w)p(c)} $$"
+    "$$ PMI(w,c) = \\log \\frac{p(w,c)}{p(w)p(c)} $$\n"
    ]
   },
   {
@@ -452,10 +485,11 @@
    "id": "db7b1fcf",
    "metadata": {},
    "source": [
-    "![](../figs/intro_nlp/vector/8.png)\n"
+    "![](figs/8.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8c3d338c",
    "metadata": {},
@@ -471,7 +505,7 @@
     "\n",
     "$$p(w) = \\frac{f{w}}{N}, p(c) = \\frac{f(c)}{N}, p(w,c) = \\frac{f(w,c)}{N}$$\n",
     "\n",
-    "$$PMI(w,c) = \\log \\frac{p(w,c)}{p(w)p(c)}$$"
+    "$$PMI(w,c) = \\log \\frac{p(w,c)}{p(w)p(c)}$$\n"
    ]
   },
   {
@@ -547,6 +581,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "72c84803",
    "metadata": {},
@@ -565,17 +600,18 @@
     "\n",
     "> $sim(\\mathbf{w}, \\mathbf{u}) = 0$: $\\mathbf{w}$ and $\\mathbf{u}$ are orthogonal\n",
     "\n",
-    "> $sim(\\mathbf{w}, \\mathbf{u}) = -1$: $\\mathbf{w}$ and $\\mathbf{u}$ point in the opposite direction"
+    "> $sim(\\mathbf{w}, \\mathbf{u}) = -1$: $\\mathbf{w}$ and $\\mathbf{u}$ point in the opposite direction\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fe129c03",
    "metadata": {},
    "source": [
     "### Visualizing cosines\n",
     "\n",
-    "![](../figs/intro_nlp/vector/cosine-viz.png)"
+    "![](figs/cosine-viz.png)\n"
    ]
   },
   {
