chore: change figs path

--- a/book/lectures/aiart/index.ipynb
+++ b/book/lectures/aiart/index.ipynb
@@ -13,10 +13,11 @@
    "source": [
     "# AI Art (Generative AI)\n",
     "\n",
-    "![aiart](../figs/aiart/entelecheia_robot_art.png)"
+    "![aiart](figs/entelecheia_robot_art.png)\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e9c99162",
    "metadata": {
@@ -28,12 +29,13 @@
    "source": [
     "## 📜 Course Description\n",
     "\n",
-    "- This course is an introduction to AI-generated art using text prompt-based models. \n",
-    "- We will explore how to use different types of models, how to interpret the results, and how to critique the output. \n",
+    "- This course is an introduction to AI-generated art using text prompt-based models.\n",
+    "- We will explore how to use different types of models, how to interpret the results, and how to critique the output.\n",
     "- In addition, we will discuss the ethical implications of AI-generated art.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ee7884ff",
    "metadata": {
@@ -46,10 +48,11 @@
     "## ♾️ Learning Goals\n",
     "\n",
     "By the end of this course, students will be able to:\n",
+    "\n",
     "- Understand the basics of AI-generated art\n",
     "- Generate their own AI-generated art\n",
     "- Critique AI-generated art\n",
-    "- Understand the ethical implications of AI-generated art"
+    "- Understand the ethical implications of AI-generated art\n"
    ]
   },
   {
@@ -76,23 +79,6 @@
     "- The training data that will be used\n",
     "- The evaluation metric that will be used\n",
     "- The expected results\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ddf1c678",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## 📒 Lecture Notes\n",
-    "\n",
-    "You can find the lecture notes of the course by clicking on the following link:\n",
-    "\n",
-    "https://entelecheia.github.io/ekorpkit-book/docs/lectures/aiart"
    ]
   },
   {
