chore: change figs path

--- a/book/lectures/nlp_deep/llms/decoding.ipynb
+++ b/book/lectures/nlp_deep/llms/decoding.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "### Greedy Search\n",
     "\n",
-    "```{image} ../figs/aiart/entelecheia_greedy_search.png\n",
+    "```{image} figs/entelecheia_greedy_search.png\n",
     ":alt: Greedy Search\n",
     ":class: bg-primary mb-1\n",
     ":width: 50%\n",
@@ -185,7 +185,7 @@
    "source": [
     "### Beam search\n",
     "\n",
-    "```{image} ../figs/aiart/entelecheia_beam_search.png\n",
+    "```{image} figs/entelecheia_beam_search.png\n",
     ":alt: Beam Search\n",
     ":class: bg-primary mb-1\n",
     ":width: 50%\n",
