--- a/book/lectures/nlp_deep/llms/zeroshot.ipynb
+++ b/book/lectures/nlp_deep/llms/zeroshot.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# Zero Shot and Prompt Engineering\n",
     "\n",
-    "```{image} ../figs/aiart/entelecheia_Zero_Shot.png\n",
+    "```{image} figs/entelecheia_Zero_Shot.png\n",
     ":alt: Zero Shot, Prompt, and Search Strategies\n",
     ":class: bg-primary mb-1\n",
     ":width: 50%\n",
@@ -34,7 +34,7 @@
    "source": [
     "## Zero Shot and Few Shot Learners\n",
     "\n",
-    "```{image} ../figs/aiart/entelecheia_a_robot.png\n",
+    "```{image} figs/entelecheia_a_robot.png\n",
     ":alt: Zero Shot and Few Shot Learners\n",
     ":class: bg-primary mb-1\n",
     ":width: 90%\n",
