--- a/book/lectures/nlp_deep/ekorpkit.ipynb
+++ b/book/lectures/nlp_deep/ekorpkit.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Getting started with ekorpkit\n",
     "\n",
-    "![student](../figs/aiart/entelecheia_a_scholar.png)"
+    "![student](figs/entelecheia_a_scholar.png)"
    ]
   },
   {
