--- a/book/lectures/nlp_intro/intro/index.ipynb
+++ b/book/lectures/nlp_intro/intro/index.ipynb
@@ -99,7 +99,7 @@
     ]
    },
    "source": [
-    "<center><img src=\"../figs/aiart/entelecheia_IBMs_Watson.png\" alt=\"watson\" width=\"600px\"></center>\n"
+    "<center><img src=\"figs/entelecheia_IBMs_Watson.png\" alt=\"watson\" width=\"600px\"></center>\n"
    ]
   },
   {
@@ -392,7 +392,7 @@
     ]
    },
    "source": [
-    "<center><img src=\"../figs/aiart/entelecheia_Virtual_assistants.png\" width=\"700px\"></center>\n"
+    "<center><img src=\"figs/entelecheia_Virtual_assistants.png\" width=\"700px\"></center>\n"
    ]
   },
   {
