chore: change figs path

--- a/book/lectures/nlp_deep/llms/zeroshot.ipynb
+++ b/book/lectures/nlp_deep/llms/zeroshot.ipynb
@@ -18,7 +18,7 @@
     ":class: bg-primary mb-1\n",
     ":width: 50%\n",
     ":align: center\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
     "\n",
     "Few-shot learning (FSL), on the other hand, involves training a model to perform a task with only a small number of examples (typically less than 10) from the target task. This is in contrast to traditional machine learning methods that often require large amounts of labeled data. Few-shot learning aims to quickly adapt to new tasks by leveraging prior knowledge and transfer learning. Meta-learning and memory-augmented neural networks are common approaches to few-shot learning, focusing on learning a model that can adapt rapidly to new tasks based on limited data.\n",
     "\n",
-    "Both zero-shot and few-shot learners are essential components in the pursuit of artificial general intelligence (AGI), as they enable models to learn efficiently and generalize effectively across various tasks and domains with minimal data."
+    "Both zero-shot and few-shot learners are essential components in the pursuit of artificial general intelligence (AGI), as they enable models to learn efficiently and generalize effectively across various tasks and domains with minimal data.\n"
    ]
   },
   {
@@ -191,7 +191,7 @@
     "\n",
     "# Classify sentiment using the pipeline\n",
     "result = classifier(review, candidate_labels=[\"positive\", \"negative\"])\n",
-    "print(result[\"labels\"][0])"
+    "print(result[\"labels\"][0])\n"
    ]
   },
   {
@@ -247,7 +247,7 @@
     "output = model.generate(input_ids, max_length=50)\n",
     "response = tokenizer.decode(output[0])\n",
     "\n",
-    "print(response)\n"
+    "print(response)"
    ]
   },
   {
@@ -303,7 +303,7 @@
     "output = model.generate(input_ids, max_length=100)\n",
     "response = tokenizer.decode(output[0])\n",
     "\n",
-    "print(response)\n"
+    "print(response)"
    ]
   },
   {
@@ -330,8 +330,7 @@
     "\n",
     "- A: The shop had 15 umbrellas originally. They sold 8 umbrellas, leaving 15 - 8 = 7. They restocked 5 more umbrellas, so they have 7 + 5 = 12. The answer is 12.\n",
     "\n",
-    "\n",
-    "In summary, chain-of-thought reasoning enables models to break down complex problems into smaller, manageable steps that can be solved individually. The language-based nature of CoT prompting makes it applicable to any task that can be solved through language. Empirical experiments have shown that CoT prompting improves performance across various reasoning tasks, and successful chain-of-thought reasoning emerges as models scale up."
+    "In summary, chain-of-thought reasoning enables models to break down complex problems into smaller, manageable steps that can be solved individually. The language-based nature of CoT prompting makes it applicable to any task that can be solved through language. Empirical experiments have shown that CoT prompting improves performance across various reasoning tasks, and successful chain-of-thought reasoning emerges as models scale up.\n"
    ]
   },
   {
@@ -344,7 +343,7 @@
     "\n",
     "**Import libraries and prepare the model**\n",
     "\n",
-    "The following code imports necessary libraries, TensorFlow and Hugging Face Transformers, to work with the GPT-2 model. It initializes a GPT-2 tokenizer and loads the pre-trained GPT-2 model from Hugging Face's model hub. The EOS token is set as the PAD token to avoid warnings during tokenization and padding."
+    "The following code imports necessary libraries, TensorFlow and Hugging Face Transformers, to work with the GPT-2 model. It initializes a GPT-2 tokenizer and loads the pre-trained GPT-2 model from Hugging Face's model hub. The EOS token is set as the PAD token to avoid warnings during tokenization and padding.\n"
    ]
   },
   {
@@ -375,10 +374,14 @@
     "import tensorflow as tf\n",
     "from transformers import TFGPT2LMHeadModel, GPT2Tokenizer\n",
     "\n",
+    "\n",
     "def generate_chain_of_thought(prompt, model, tokenizer, max_length=100):\n",
     "    input_ids = tokenizer.encode(prompt, return_tensors=\"tf\")\n",
-    "    generated_text = model.generate(input_ids, max_length=max_length, num_return_sequences=1)\n",
+    "    generated_text = model.generate(\n",
+    "        input_ids, max_length=max_length, num_return_sequences=1\n",
+    "    )\n",
     "    return tokenizer.decode(generated_text[0], skip_special_tokens=True)\n",
+    "\n",
     "\n",
     "tokenizer = GPT2Tokenizer.from_pretrained(\"gpt2\")\n",
     "model = TFGPT2LMHeadModel.from_pretrained(\"gpt2\", pad_token_id=tokenizer.eos_token_id)\n",
@@ -391,7 +394,7 @@
     "\n",
     "# Generate the answer\n",
     "answer = generate_chain_of_thought(cot_prompt, model, tokenizer)\n",
-    "print(answer)\n"
+    "print(answer)"
    ]
   },
   {
@@ -408,6 +411,7 @@
     "\n",
     "openai.api_key = \"API_KEY\"\n",
     "\n",
+    "\n",
     "def generate_chain_of_thought(prompt, model_engine=\"text-davinci-003\", max_tokens=100):\n",
     "    response = openai.Completion.create(\n",
     "        engine=model_engine,\n",
@@ -419,6 +423,7 @@
     "    )\n",
     "    return response.choices[0].text.strip()\n",
     "\n",
+    "\n",
     "# Example problem\n",
     "problem = \"Jane has 7 books on her shelf. She borrowed 4 books from the library. How many books does she have now?\"\n",
     "\n",
@@ -427,8 +432,10 @@
     "\n",
     "# Generate the answer\n",
     "answer_text = generate_chain_of_thought(cot_prompt)\n",
-    "answer = re.findall(r\"\\d+\", answer_text)[0] if re.findall(r\"\\d+\", answer_text) else \"unknown\"\n",
-    "print(answer)\n"
+    "answer = (\n",
+    "    re.findall(r\"\\d+\", answer_text)[0] if re.findall(r\"\\d+\", answer_text) else \"unknown\"\n",
+    ")\n",
+    "print(answer)"
    ]
   }
  ],
