chore: add refs

--- a/book/references.bib
+++ b/book/references.bib
@@ -523,3 +523,135 @@
   year    = {2022},
   url     = {https://openreview.net/pdf?id=yzkSU5zdwD}
 }
+
+@article{Holden:2017,
+   TITLE      = {Phase-functioned neural networks for character control},
+   AUTHOR     = {Holden, Daniel
+               AND Komura, Taku
+               AND Saito, Jun},
+   JOURNAL    = {ACM Transactions on Graphics (TOG)},
+   VOLUME     = {36},
+   NUMBER     = {4},
+   PAGES      = {1--13},
+   YEAR       = {2017},
+   PUBLISHER  = {ACM New York, NY, USA}
+}
+@inproceedings{Shlizerman:2018,
+   TITLE      = {Audio to body dynamics},
+   AUTHOR     = {Shlizerman, Eli
+               AND Dery, Lucio
+               AND Schoen, Hayden
+               AND Kemelmacher-shlizerman, Ira},
+   BOOKTITLE  = {Proceedings of the IEEE conference on computer vision and pattern recognition},
+   PAGES      = {7574--7583},
+   YEAR       = {2018}
+}
+@inproceedings{Chan:2019,
+   TITLE      = {Everybody dance now},
+   AUTHOR     = {Chan, Caroline
+               AND Ginosar, Shiry
+               AND Zhou, Tinghui
+               AND Efros, Alexei A},
+   BOOKTITLE  = {Proceedings of the IEEE/CVF international conference on computer vision},
+   PAGES      = {5933--5942},
+   YEAR       = {2019}
+}
+@article{Peng:2018,
+   TITLE      = {Sfv: Reinforcement learning of physical skills from videos},
+   AUTHOR     = {Peng, Xue Bin
+               AND Kanazawa, Angjoo
+               AND Malik, Jitendra
+               AND Abbeel, Pieter
+               AND Levine, Sergey},
+   JOURNAL    = {ACM Transactions On Graphics (TOG)},
+   VOLUME     = {37},
+   NUMBER     = {6},
+   PAGES      = {1--14},
+   YEAR       = {2018},
+   PUBLISHER  = {ACM New York, NY, USA}
+}
+@article{Mathis:2018,
+   TITLE      = {DeepLabCut: markerless pose estimation of user-defined body parts with deep learning},
+   AUTHOR     = {Mathis, Alexander
+               AND Mamidanna, Pranav
+               AND Cury, Kevin M
+               AND Abe, Taiga
+               AND Murthy, Venkatesh N
+               AND Mathis, Mackenzie Weygandt
+               AND Bethge, Matthias},
+   JOURNAL    = {Nature neuroscience},
+   VOLUME     = {21},
+   NUMBER     = {9},
+   PAGES      = {1281--1289},
+   YEAR       = {2018},
+   PUBLISHER  = {Nature Publishing Group}
+}
+@article{Kane:2020,
+   TITLE      = {Real-time, low-latency closed-loop feedback using markerless posture tracking},
+   AUTHOR     = {Kane, Gary A
+               AND Lopes, Gon{\c{c}}alo
+               AND Saunders, Jonny L
+               AND Mathis, Alexander
+               AND Mathis, Mackenzie W},
+   JOURNAL    = {Elife},
+   VOLUME     = {9},
+   PAGES      = {e61909},
+   YEAR       = {2020},
+   PUBLISHER  = {eLife Sciences Publications, Ltd}
+}
+@inproceedings{Xie:2021,
+   TITLE      = {Physics-based human motion estimation and synthesis from videos},
+   AUTHOR     = {Xie, Kevin
+               AND Wang, Tingwu
+               AND Iqbal, Umar
+               AND Guo, Yunrong
+               AND Fidler, Sanja
+               AND Shkurti, Florian},
+   BOOKTITLE  = {Proceedings of the IEEE/CVF International Conference on Computer Vision},
+   PAGES      = {11532--11541},
+   YEAR       = {2021}
+}
+@article{Zhang:2022,
+   TITLE      = {Motiondiffuse: Text-driven human motion generation with diffusion model},
+   AUTHOR     = {Zhang, Mingyuan
+               AND Cai, Zhongang
+               AND Pan, Liang
+               AND Hong, Fangzhou
+               AND Guo, Xinying
+               AND Yang, Lei
+               AND Liu, Ziwei},
+   JOURNAL    = {arXiv preprint arXiv:2208.15001},
+   YEAR       = {2022}
+}
+@article{Tevet:2022,
+   TITLE      = {Human motion diffusion model},
+   AUTHOR     = {Tevet, Guy
+               AND Raab, Sigal
+               AND Gordon, Brian
+               AND Shafir, Yonatan
+               AND Cohen-or, Daniel
+               AND Bermano, Amit H},
+   JOURNAL    = {arXiv preprint arXiv:2209.14916},
+   YEAR       = {2022}
+}
+@inproceedings{Guo:2022,
+   TITLE      = {Generating diverse and natural 3d human motions from text},
+   AUTHOR     = {Guo, Chuan
+               AND Zou, Shihao
+               AND Zuo, Xinxin
+               AND Wang, Sen
+               AND Ji, Wei
+               AND Li, Xingyu
+               AND Cheng, Li},
+   BOOKTITLE  = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+   PAGES      = {5152--5161},
+   YEAR       = {2022}
+}
+@article{Kim:2022,
+   TITLE      = {Flame: Free-form language-based motion synthesis \& editing},
+   AUTHOR     = {Kim, Jihoon
+               AND Kim, Jiseob
+               AND Choi, Sungjoon},
+   JOURNAL    = {arXiv preprint arXiv:2209.00349},
+   YEAR       = {2022}
+}
