docs: add mc4 lecture

--- a/book/references.bib
+++ b/book/references.bib
@@ -655,3 +655,10 @@
    JOURNAL    = {arXiv preprint arXiv:2209.00349},
    YEAR       = {2022}
 }
+
+@article{xue2020mt5,
+  title={mT5: A massively multilingual pre-trained text-to-text transformer},
+  author={Xue, Linting and Constant, Noah and Roberts, Adam and Kale, Mihir and Al-Rfou, Rami and Siddhant, Aditya and Barua, Aditya and Raffel, Colin},
+  journal={arXiv preprint arXiv:2010.11934},
+  year={2020}
+}
