chore: update mc4

--- a/book/references.bib
+++ b/book/references.bib
@@ -662,3 +662,10 @@
   journal={arXiv preprint arXiv:2010.11934},
   year={2020}
 }
+
+@article{de2022bertin,
+  title={Bertin: Efficient pre-training of a spanish language model using perplexity sampling},
+  author={De la Rosa, Javier and Ponferrada, Eduardo G and Villegas, Paulo and Salas, Pablo Gonzalez de Prado and Romero, Manu and Grandury, Mar{\i}a},
+  journal={arXiv preprint arXiv:2207.06814},
+  year={2022}
+}
